# webcam_viewer

./: .gitignore  Cargo.toml  LICENSE  README.md
assets/: changelog  webcam-viewer.desktop
src/: main.rs
